--- a/css/styles10.css
+++ b/css/styles10.css
@@ -184,6 +184,7 @@ button:hover {
 
 .cart-table {
     width: 100%;
+    max-width: 1200px;
     margin: 20px auto;
     border-collapse: collapse;
     background-color: #fff;
